--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,49 @@
-h2{
-    color: #0052aa;
+h2 {
+    color: #947F60;
+}
+
+/*------------*/
+/*accueil.html*/
+.accueil .carousel-item {
+    height: 32rem;
+    background-color: #777;
+    color: white;
+    position: relative;
+    background-position: center;
+    background-size: cover;
+}
+
+.accueil .carousel-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.accueil  .container {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding-bottom: 50px;
+}
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.card-body {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.card-text {
+    flex-grow: 1;
+}
+
+.card img {
+    width: 100%;
+    height: auto;
 }
