--- a/templates/accueil.html
+++ b/templates/accueil.html
@@ -1,30 +1,82 @@
 {% extends "layout.html" %}
 {% block content %}
-<h2 class="titre">Nos catégories</h2>
-<div class="album py-5 bg-light">
-    <div class="container">
-        <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 g-3">
-            {% for cat in liste_cat: %}
-            <div class="col">
-                <div class="card shadow-sm">
-                    <img loading="lazy" src="/static/images/{{ cat.image_cat }}" alt="image"/>
-                    <div class="card-body">
-                        <p class="card-text">
- <span class="titre">
- <a href="{{ url_for('produits_categorie', id_cat=cat.id_cat) }}">{{ cat.nom_categorie}}</a>
- </span>
-                        </p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group" id="remove_a">
-                            </div>
-                            <div class="btn-group">
-                            </div>
-                        </div>
-                    </div>
+
+    <!doctype html>
+    <html lang="en">
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+              integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+              crossorigin="anonymous">
+
+
+    </head>
+    <body class="accueil">
+    <div id="myCarousel" class="carousel slide carousel-fade" data-ds-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active " data-interval="2000">
+                <img src="./static/images/accueil11.jpg" alt="Articles">
+                <div class="container">
+                    <h1>Nos Articles</h1>
+                    <p>Pour plus d'infos sur nos Articles. Veuillez vous rendre sur la page Article.</p>
+
                 </div>
             </div>
-            {% endfor %}
+            <div class="carousel-item" data-interval="1000">
+                <img src="./static/images/accueil2.jpg" alt="Creations">
+                <div class="container">
+                    <h1>Nos Creation</h1>
+                    <p>Pour plus d'infos sur nos Creations. Veuillez vous rendre sur la page Creation.</p>
+
+                </div>
+            </div>
+            <div class="carousel-item" data-interval="500">
+                <img src="./static/images/accueil3.jpg" alt="Nouveautes">
+                <div class="container">
+                    <h1>Nos Nouveautés</h1>
+                    <p>Pour plus d'infos sur nos Nouveautés. Veuillez vous rendre sur la page Nouveaute.</p>
+
+                </div>
+            </div>
         </div>
+        <a href="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+            <span class="sr-only">Previous</span>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        </a>
+        <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
+            <span class="sr-only">Previous</span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        </a>
     </div>
-</div>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+            crossorigin="anonymous"></script>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+            integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+            crossorigin="anonymous"></script>
+
+    </body>
+    </html>
+
 {% endblock content %}
