--- a/templates/tous_produits.html
+++ b/templates/tous_produits.html
@@ -1,31 +1,23 @@
 {% extends "layout.html" %}
 {% block content %}
 <br>
-<h2>Nos produits</h2>
-<!--pre>
- {{ liste_prod }}
- </pre>-->
+<h2>Nos Vêtements</h2>
 
 <div class="album py-5 bg-light">
     <div class="container">
-        <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 g-3">
-            {% for prod in liste_prod: %}
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            {% for produit in liste_prod %}
             <div class="col">
                 <div class="card shadow-sm">
-                    <img loading="lazy" src="/static/images/{{ prod.image_produit }}" alt="image"/>
+                    <img loading="lazy" src="/static/images/{{ produit.image_produit }}" alt="image" class="card-img-top">
                     <div class="card-body">
-                        <p class="card-text">
-                            <span class="titre">
- {{ prod.nom_categorie }}
- </span><br>
-                            {{ prod.nom_produit }} <br>{{ prod.prix_produit }} €
-                            <br>{{ prod.description }}
-                        </p>
+                        <h5 class="card-title">{{ produit.nom_produit }}</h5>
+                        <p class="card-text">{{ produit.description }}</p>
                         <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group" id="remove_a">
-                            </div>
                             <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">Ajouter au panier</button>
                             </div>
+                            <small class="text-muted">{{ produit.prix_produit }} €</small>
                         </div>
                     </div>
                 </div>
