--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,11 +2,14 @@ h2 {
     color: #947F60;
     padding-left: 20px;
 }
+.accueil {
+        overflow: hidden;
 
+}
 /*------------*/
 /*accueil.html*/
 .accueil .carousel-item {
-    height: 32rem;
+    height: 93vh;
     background-color: #777;
     color: white;
     position: relative;
@@ -46,7 +49,8 @@ h2 {
 
 .card img {
     width: 100%;
-    height: auto;
+    height: 500px;
+
 }
 
 
